# document-research-assistant

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
scripts/: compare_evals.py  generate_eval.py  ingest.py  run_eval.py  serve.py
src/research_assistant/: config.py  pipeline.py  server.py
src/research_assistant/agents/: decomposition.py  simple.py
src/research_assistant/corpus/: models.py  protocol.py
src/research_assistant/corpus/edgar/: cache.py  chunker.py  metadata.py  parser.py
src/research_assistant/eval/: generate.py  models.py  runner.py
src/research_assistant/eval/datasets/: adversarial.yaml  comparison.yaml  factual.yaml  factual_schema.json  multihop.yaml  temporal.yaml
src/research_assistant/eval/evaluators/: answer_contains.py  context_precision.py  faithfulness.py  numeric_match.py  retrieval_relevance.py
src/research_assistant/retrieval/: embeddings.py  ingest.py  query_filter.py  reranker.py  vector_store.py
tests/: conftest.py
tests/test_agents/: test_decomposition.py  test_pipeline.py  test_simple.py
tests/test_corpus/: test_edgar_cache.py  test_edgar_chunker.py  test_models.py
tests/test_eval/: test_evaluators.py
tests/test_retrieval/: test_embeddings.py  test_ingest.py  test_query_filter.py  test_reranker.py  test_vector_store.py
