[project]
name = "document-research-assistant"
version = "0.1.0"
description = "Multi-document research assistant with configurable corpus support"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pydantic-ai",
    "pydantic-evals",
    "qdrant-client",
    "fastembed",
    "edgartools",
    "logfire",
    "diskcache>=5.6.3",
    "chonkie>=1.6.2",
]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "pytest>=8.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.11",
    "ty",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "research_assistant"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.12"
